first update mechanism cost model, more environemts

--- a/experiments/model_optimizer/notebooks/list_results_files.ipynb
+++ b/experiments/model_optimizer/notebooks/list_results_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "77823cb0-936f-4fe7-903a-de6ae5bd32ac",
    "metadata": {},
    "outputs": [
@@ -11,99 +11,44 @@
      "output_type": "stream",
      "text": [
       "S16_C16_N1000:\n",
-      "  quantile_transfer_exc_env1_env4_syne_tune_n_10: 25x;\n",
-      "  quantile_transfer_exc_env1_env4_syne_tune_n_150: 25x;\n",
-      "  quantile_transfer_exc_env1_env4_syne_tune_n_25: 25x;\n",
-      "  quantile_transfer_exc_env1_env4_syne_tune_n_250: 25x;\n",
-      "  quantile_transfer_exc_env1_env4_syne_tune_n_350: 25x;\n",
-      "  quantile_transfer_exc_env1_env4_syne_tune_n_450: 25x;\n",
-      "  quantile_transfer_exc_env1_env4_syne_tune_n_50: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env1_env4_open_box_n_10: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env1_env4_open_box_n_150: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env1_env4_open_box_n_25: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env1_env4_open_box_n_250: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env1_env4_open_box_n_350: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env1_env4_open_box_n_450: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env1_env4_open_box_n_50: 25x;\n",
-      "  tlbo_topov3_prf_exc_env1_env4_open_box_n_10: 25x;\n",
-      "  tlbo_topov3_prf_exc_env1_env4_open_box_n_150: 25x;\n",
-      "  tlbo_topov3_prf_exc_env1_env4_open_box_n_25: 25x;\n",
-      "  tlbo_topov3_prf_exc_env1_env4_open_box_n_250: 25x;\n",
-      "  tlbo_topov3_prf_exc_env1_env4_open_box_n_350: 25x;\n",
-      "  tlbo_topov3_prf_exc_env1_env4_open_box_n_450: 25x;\n",
-      "  tlbo_topov3_prf_exc_env1_env4_open_box_n_50: 25x;\n",
-      "  zero_shot_transfer_exc_env1_env4_syne_tune_n_10: 25x;\n",
-      "  zero_shot_transfer_exc_env1_env4_syne_tune_n_150: 25x;\n",
-      "  zero_shot_transfer_exc_env1_env4_syne_tune_n_25: 25x;\n",
-      "  zero_shot_transfer_exc_env1_env4_syne_tune_n_250: 25x;\n",
-      "  zero_shot_transfer_exc_env1_env4_syne_tune_n_350: 25x;\n",
-      "  zero_shot_transfer_exc_env1_env4_syne_tune_n_450: 25x;\n",
-      "  zero_shot_transfer_exc_env1_env4_syne_tune_n_50: 25x;\n",
+      "  cost_model_rfs_rs_exc: 24x;24x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 24x;24x;\n",
+      "S16_C16_N10000:\n",
+      "  cost_model_rfs_rs_exc: 24x;24x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 24x;24x;\n",
+      "S16_C1_N10:\n",
+      "  cost_model_rfs_rs_exc: 24x;17x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 23x;17x;\n",
+      "S16_C1_N1000:\n",
+      "  cost_model_rfs_rs_exc: 24x;24x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 24x;24x;\n",
+      "S16_C4_N10:\n",
+      "  cost_model_rfs_rs_exc: 24x;24x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 22x;23x;\n",
       "S16_C8_N100:\n",
-      "  quantile_transfer_exc_env2_env5_syne_tune_n_10: 25x;\n",
-      "  quantile_transfer_exc_env2_env5_syne_tune_n_150: 25x;\n",
-      "  quantile_transfer_exc_env2_env5_syne_tune_n_25: 16x;\n",
-      "  quantile_transfer_exc_env2_env5_syne_tune_n_250: 25x;\n",
-      "  quantile_transfer_exc_env2_env5_syne_tune_n_350: 25x;\n",
-      "  quantile_transfer_exc_env2_env5_syne_tune_n_450: 17x;\n",
-      "  quantile_transfer_exc_env2_env5_syne_tune_n_50: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env2_env5_open_box_n_10: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env2_env5_open_box_n_150: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env2_env5_open_box_n_25: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env2_env5_open_box_n_250: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env2_env5_open_box_n_450: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env2_env5_open_box_n_50: 25x;\n",
-      "  tlbo_topov3_prf_exc_env2_env5_open_box_n_10: 25x;\n",
-      "  tlbo_topov3_prf_exc_env2_env5_open_box_n_150: 25x;\n",
-      "  tlbo_topov3_prf_exc_env2_env5_open_box_n_25: 25x;\n",
-      "  tlbo_topov3_prf_exc_env2_env5_open_box_n_250: 18x;\n",
-      "  tlbo_topov3_prf_exc_env2_env5_open_box_n_350: 25x;\n",
-      "  tlbo_topov3_prf_exc_env2_env5_open_box_n_450: 23x;\n",
-      "  tlbo_topov3_prf_exc_env2_env5_open_box_n_50: 25x;\n",
-      "  zero_shot_transfer_exc_env2_env5_syne_tune_n_10: 25x;\n",
-      "  zero_shot_transfer_exc_env2_env5_syne_tune_n_150: 25x;\n",
-      "  zero_shot_transfer_exc_env2_env5_syne_tune_n_25: 25x;\n",
-      "  zero_shot_transfer_exc_env2_env5_syne_tune_n_250: 25x;\n",
-      "  zero_shot_transfer_exc_env2_env5_syne_tune_n_350: 25x;\n",
-      "  zero_shot_transfer_exc_env2_env5_syne_tune_n_450: 15x;\n",
-      "  zero_shot_transfer_exc_env2_env5_syne_tune_n_50: 25x;\n",
+      "  cost_model_rfs_rs_exc: 23x;24x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 24x;22x;\n",
+      "S2_C2_N20:\n",
+      "  cost_model_rfs_rs_exc: 24x;24x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 24x;24x;\n",
       "S8_C1_N50:\n",
-      "  quantile_transfer_exc_env3_env8_syne_tune_n_10: 25x;\n",
-      "  quantile_transfer_exc_env3_env8_syne_tune_n_150: 25x;\n",
-      "  quantile_transfer_exc_env3_env8_syne_tune_n_250: 25x;\n",
-      "  quantile_transfer_exc_env3_env8_syne_tune_n_350: 25x;\n",
-      "  quantile_transfer_exc_env3_env8_syne_tune_n_50: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env3_env8_open_box_n_10: 22x;\n",
-      "  tlbo_rgpe_prf_exc_env3_env8_open_box_n_150: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env3_env8_open_box_n_25: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env3_env8_open_box_n_250: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env3_env8_open_box_n_350: 25x;\n",
-      "  tlbo_rgpe_prf_exc_env3_env8_open_box_n_50: 25x;\n",
-      "  tlbo_topov3_prf_exc_env3_env8_open_box_n_10: 12x;\n",
-      "  tlbo_topov3_prf_exc_env3_env8_open_box_n_150: 25x;\n",
-      "  tlbo_topov3_prf_exc_env3_env8_open_box_n_25: 19x;\n",
-      "  tlbo_topov3_prf_exc_env3_env8_open_box_n_250: 25x;\n",
-      "  tlbo_topov3_prf_exc_env3_env8_open_box_n_350: 25x;\n",
-      "  tlbo_topov3_prf_exc_env3_env8_open_box_n_50: 25x;\n",
-      "  zero_shot_transfer_exc_env3_env8_syne_tune_n_10: 25x;\n",
-      "  zero_shot_transfer_exc_env3_env8_syne_tune_n_150: 25x;\n",
-      "  zero_shot_transfer_exc_env3_env8_syne_tune_n_250: 25x;\n",
-      "  zero_shot_transfer_exc_env3_env8_syne_tune_n_350: 25x;\n",
-      "  zero_shot_transfer_exc_env3_env8_syne_tune_n_50: 25x;\n",
-      "changing_env1_to_env3:\n",
-      "  tlbo_rgpe_gp_changing_envs_open_box: 49x;43x;\n",
-      "  tlbo_rgpe_prf_changing_envs_open_box: 30x;50x;65x;\n",
-      "  tlbo_sgpr_gp_changing_envs_open_box: 6x;50x;\n",
-      "  tlbo_sgpr_prf_changing_envs_open_box: 50x;13x;\n",
-      "  tlbo_topov3_gp_changing_envs_open_box: 49x;8x;\n",
-      "  tlbo_topov3_prf_changing_envs_open_box: 50x;\n",
+      "  cost_model_rfs_rs_exc: 24x;24x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 24x;24x;\n",
+      "S8_C8_N500:\n",
+      "  cost_model_rfs_rs_exc: 24x;24x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 24x;24x;\n",
       "\n",
-      "S16_C16_N1000: 700\n",
-      "S16_C8_N100: 639\n",
-      "S8_C1_N50: 528\n",
-      "changing_env1_to_env3: 463\n",
+      "S16_C16_N1000: 96\n",
+      "S16_C16_N10000: 96\n",
+      "S16_C1_N10: 81\n",
+      "S16_C1_N1000: 96\n",
+      "S16_C4_N10: 93\n",
+      "S16_C8_N100: 93\n",
+      "S2_C2_N20: 96\n",
+      "S8_C1_N50: 96\n",
+      "S8_C8_N500: 96\n",
       "\n",
-      "Total Transfer Count : 2330\n"
+      "Total Transfer Count : 843\n"
      ]
     }
    ],
@@ -115,7 +60,7 @@
     "\n",
     "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_6250k/*/*/*.csv')\n",
     "\n",
-    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/*/*.csv')\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/cost*/*.csv')\n",
     "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k_shorter_runs/*/*/*.csv')\n",
     "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_175k/*/*/*.csv')\n",
     "\n",
@@ -159,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "id": "3059d1c8-745e-441b-8d23-588a7cfe457a",
    "metadata": {},
    "outputs": [
@@ -167,49 +112,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S16_C16_N10000_random_samples : 683\n",
-      "S16_C16_N1000_random_samples : 909\n",
-      "S16_C16_N100_random_samples : 31\n",
-      "S16_C16_N20_random_samples : 32\n",
-      "S16_C16_N500_random_samples : 31\n",
-      "S16_C1_N1000_random_samples : 627\n",
-      "S16_C1_N10_random_samples : 460\n",
-      "S16_C2_N1000_random_samples : 32\n",
-      "S16_C2_N100_random_samples : 31\n",
-      "S16_C2_N20_random_samples : 32\n",
-      "S16_C2_N500_random_samples : 32\n",
-      "S16_C4_N10_random_samples : 464\n",
-      "S16_C8_N1000_random_samples : 31\n",
-      "S16_C8_N100_random_samples : 613\n",
-      "S16_C8_N20_random_samples : 32\n",
-      "S16_C8_N500_random_samples : 31\n",
-      "S2_C16_N1000_random_samples : 43\n",
-      "S2_C16_N100_random_samples : 42\n",
-      "S2_C16_N20_random_samples : 44\n",
-      "S2_C16_N500_random_samples : 44\n",
-      "S2_C2_N1000_random_samples : 44\n",
-      "S2_C2_N100_random_samples : 42\n",
-      "S2_C2_N20_random_samples : 574\n",
-      "S2_C2_N500_random_samples : 43\n",
-      "S2_C8_N1000_random_samples : 42\n",
-      "S2_C8_N100_random_samples : 41\n",
-      "S2_C8_N20_random_samples : 39\n",
-      "S2_C8_N500_random_samples : 42\n",
-      "S8_C16_N1000_random_samples : 31\n",
-      "S8_C16_N100_random_samples : 32\n",
-      "S8_C16_N20_random_samples : 32\n",
-      "S8_C16_N500_random_samples : 32\n",
-      "S8_C1_N50_random_samples : 876\n",
-      "S8_C2_N1000_random_samples : 43\n",
-      "S8_C2_N100_random_samples : 42\n",
-      "S8_C2_N20_random_samples : 44\n",
-      "S8_C2_N500_random_samples : 43\n",
-      "S8_C8_N1000_random_samples : 32\n",
-      "S8_C8_N100_random_samples : 40\n",
-      "S8_C8_N20_random_samples : 44\n",
-      "S8_C8_N500_random_samples : 623\n",
+      "S16_C16_N1000_random_samples : 16\n",
+      "S16_C2_N1000_random_samples : 4\n",
+      "S16_C4_N1000_random_samples : 20\n",
+      "S16_C8_N1000_random_samples : 4\n",
+      "S2_C16_N1000_random_samples : 4\n",
+      "S2_C2_N1000_random_samples : 4\n",
+      "S2_C4_N1000_random_samples : 20\n",
+      "S2_C8_N1000_random_samples : 4\n",
+      "S4_C16_N1000_random_samples : 20\n",
+      "S4_C2_N1000_random_samples : 20\n",
+      "S4_C4_N1000_random_samples : 20\n",
+      "S4_C8_N1000_random_samples : 20\n",
+      "S8_C16_N1000_random_samples : 4\n",
+      "S8_C2_N1000_random_samples : 4\n",
+      "S8_C4_N1000_random_samples : 20\n",
+      "S8_C8_N1000_random_samples : 4\n",
       "\n",
-      "Total Random Sample Count : 7025\n"
+      "Total Random Sample Count : 188\n"
      ]
     }
    ],
@@ -226,6 +146,10 @@
     "\n",
     "for file in all_files:\n",
     "    df = pd.read_csv(file)\n",
+    "\n",
+    "    #if \"N1000\" not in file:\n",
+    "    #if \"S16_C16_N\" not in file:\n",
+    "    #<    continue\n",
     "    \n",
     "    df = df[df['time'] > 0]    \n",
     "    count = len(df[df['time'].notna()])\n",
