--- a/experiments/model_optimizer/notebooks/list_results_files.ipynb
+++ b/experiments/model_optimizer/notebooks/list_results_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 228,
    "id": "77823cb0-936f-4fe7-903a-de6ae5bd32ac",
    "metadata": {},
    "outputs": [
@@ -11,44 +11,64 @@
      "output_type": "stream",
      "text": [
       "S16_C16_N1000:\n",
-      "  cost_model_rfs_rs_exc: 24x;24x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 24x;24x;\n",
-      "S16_C16_N10000:\n",
-      "  cost_model_rfs_rs_exc: 24x;24x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 24x;24x;\n",
-      "S16_C1_N10:\n",
-      "  cost_model_rfs_rs_exc: 24x;17x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 23x;17x;\n",
-      "S16_C1_N1000:\n",
-      "  cost_model_rfs_rs_exc: 24x;24x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 24x;24x;\n",
-      "S16_C4_N10:\n",
-      "  cost_model_rfs_rs_exc: 24x;24x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 22x;23x;\n",
-      "S16_C8_N100:\n",
-      "  cost_model_rfs_rs_exc: 23x;24x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 24x;22x;\n",
-      "S2_C2_N20:\n",
-      "  cost_model_rfs_rs_exc: 24x;24x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 24x;24x;\n",
-      "S8_C1_N50:\n",
-      "  cost_model_rfs_rs_exc: 24x;24x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 24x;24x;\n",
-      "S8_C8_N500:\n",
-      "  cost_model_rfs_rs_exc: 24x;24x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 24x;24x;\n",
+      "  random_search_syne_tune: 25x;25x;\n",
+      "  tlbo_rgpe_prf_exc_S16C16N1000_S16C8N1000_open_box_n_100: 25x;\n",
+      "  tlbo_topov3_prf_exc_S16C16N1000_S16C8N1000_open_box_n_100: 8x;\n",
+      "S16_C16_N150:\n",
+      "  quantile_exc_S16C16N150_S8C8N150_syne_tune_n_100: 25x;\n",
+      "  random_search_syne_tune: 25x;25x;\n",
+      "  tlbo_rgpe_prf_exc_S16C16N150_S8C8N150_open_box_n_100: 25x;\n",
+      "  tlbo_topov3_prf_exc_S16C16N150_S8C8N150_open_box_n_100: 25x;\n",
+      "S16_C16_N50:\n",
+      "  quantile_exc_S16C16N50_S8C8N50_syne_tune_n_100: 25x;\n",
+      "  random_search_syne_tune: 25x;25x;\n",
+      "  tlbo_rgpe_prf_exc_S16C16N50_S8C8N50_open_box_n_100: 25x;\n",
+      "  tlbo_topov3_prf_exc_S16C16N50_S8C8N50_open_box_n_100: 25x;\n",
+      "S2_C2_N1000:\n",
+      "  quantile_exc_S2C2N1000_S2C8N1000_syne_tune_n_100: 25x;\n",
+      "  random_search_syne_tune: 25x;25x;\n",
+      "  tlbo_rgpe_prf_exc_S2C2N1000_S2C8N1000_open_box_n_100: 25x;\n",
+      "  tlbo_topov3_prf_exc_S2C2N1000_S2C8N1000_open_box_n_100: 25x;\n",
+      "S2_C2_N150:\n",
+      "  quantile_exc_S2C2N150_S2C8N150_syne_tune_n_100: 25x;\n",
+      "  random_search_syne_tune: 25x;25x;\n",
+      "  tlbo_rgpe_prf_exc_S2C2N150_S2C8N150_open_box_n_100: 25x;\n",
+      "  tlbo_topov3_prf_exc_S2C2N150_S2C8N150_open_box_n_100: 25x;\n",
+      "S2_C2_N50:\n",
+      "  quantile_exc_S2C2N50_S2C8N50_syne_tune_n_100: 25x;\n",
+      "  quantile_exc_S2C2N50_S2C8N50_syne_tune_with_clustering_n_100: 5x;\n",
+      "  random_search_syne_tune: 25x;25x;\n",
+      "  tlbo_rgpe_prf_exc_S2C2N50_S2C8N50_open_box_n_100: 25x;\n",
+      "  tlbo_rgpe_prf_exc_S2C2N50_S2C8N50_open_box_with_clustering_n_100: 4x;\n",
+      "  tlbo_topov3_prf_exc_S2C2N50_S2C8N50_open_box_n_100: 21x;\n",
+      "  tlbo_topov3_prf_exc_S2C2N50_S2C8N50_open_box_with_clustering_n_100: 3x;\n",
+      "S8_C2_N1000:\n",
+      "  quantile_exc_S8C2N1000_S8C8N1000_syne_tune_n_100: 25x;\n",
+      "  random_search_syne_tune: 20x;25x;\n",
+      "  tlbo_rgpe_prf_exc_S8C2N1000_S8C8N1000_open_box_n_100: 25x;\n",
+      "  tlbo_topov3_prf_exc_S8C2N1000_S8C8N1000_open_box_n_100: 20x;\n",
+      "S8_C2_N150:\n",
+      "  quantile_exc_S8C2N150_S8C8N150_syne_tune_n_100: 25x;\n",
+      "  random_search_syne_tune: 25x;25x;\n",
+      "  tlbo_rgpe_prf_exc_S8C2N150_S8C8N150_open_box_n_100: 25x;\n",
+      "  tlbo_topov3_prf_exc_S8C2N150_S8C8N150_open_box_n_100: 25x;\n",
+      "S8_C2_N50:\n",
+      "  quantile_exc_S8C2N50_S8C8N50_syne_tune_n_100: 25x;\n",
+      "  random_search_syne_tune: 25x;25x;\n",
+      "  tlbo_rgpe_prf_exc_S8C2N50_S8C8N50_open_box_n_100: 25x;\n",
+      "  tlbo_topov3_prf_exc_S8C2N50_S8C8N50_open_box_n_100: 25x;\n",
       "\n",
-      "S16_C16_N1000: 96\n",
-      "S16_C16_N10000: 96\n",
-      "S16_C1_N10: 81\n",
-      "S16_C1_N1000: 96\n",
-      "S16_C4_N10: 93\n",
-      "S16_C8_N100: 93\n",
-      "S2_C2_N20: 96\n",
-      "S8_C1_N50: 96\n",
-      "S8_C8_N500: 96\n",
+      "S16_C16_N1000: 83\n",
+      "S16_C16_N150: 125\n",
+      "S16_C16_N50: 125\n",
+      "S2_C2_N1000: 125\n",
+      "S2_C2_N150: 125\n",
+      "S2_C2_N50: 133\n",
+      "S8_C2_N1000: 115\n",
+      "S8_C2_N150: 125\n",
+      "S8_C2_N50: 125\n",
       "\n",
-      "Total Transfer Count : 843\n"
+      "Total Transfer Count : 1081\n"
      ]
     }
    ],
@@ -60,7 +80,7 @@
     "\n",
     "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_6250k/*/*/*.csv')\n",
     "\n",
-    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/cost*/*.csv')\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/*/*.csv')\n",
     "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k_shorter_runs/*/*/*.csv')\n",
     "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_175k/*/*/*.csv')\n",
     "\n",
@@ -104,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 214,
    "id": "3059d1c8-745e-441b-8d23-588a7cfe457a",
    "metadata": {},
    "outputs": [
@@ -112,24 +132,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S16_C16_N1000_random_samples : 16\n",
-      "S16_C2_N1000_random_samples : 4\n",
-      "S16_C4_N1000_random_samples : 20\n",
-      "S16_C8_N1000_random_samples : 4\n",
-      "S2_C16_N1000_random_samples : 4\n",
-      "S2_C2_N1000_random_samples : 4\n",
-      "S2_C4_N1000_random_samples : 20\n",
-      "S2_C8_N1000_random_samples : 4\n",
-      "S4_C16_N1000_random_samples : 20\n",
-      "S4_C2_N1000_random_samples : 20\n",
-      "S4_C4_N1000_random_samples : 20\n",
-      "S4_C8_N1000_random_samples : 20\n",
-      "S8_C16_N1000_random_samples : 4\n",
-      "S8_C2_N1000_random_samples : 4\n",
-      "S8_C4_N1000_random_samples : 20\n",
-      "S8_C8_N1000_random_samples : 4\n",
+      "S16_C16_N10000_random_samples : 4\n",
+      "S16_C16_N1000_random_samples : 97\n",
+      "S16_C16_N100_random_samples : 42\n",
+      "S16_C16_N150_random_samples : 100\n",
+      "S16_C16_N200_random_samples : 62\n",
+      "S16_C16_N20_random_samples : 57\n",
+      "S16_C16_N300_random_samples : 64\n",
+      "S16_C16_N400_random_samples : 64\n",
+      "S16_C16_N500_random_samples : 43\n",
+      "S16_C16_N50_random_samples : 100\n",
+      "S16_C16_N600_random_samples : 64\n",
+      "S16_C16_N700_random_samples : 65\n",
+      "S16_C16_N800_random_samples : 65\n",
+      "S16_C16_N900_random_samples : 65\n",
+      "S16_C2_N1000_random_samples : 60\n",
+      "S16_C4_N1000_random_samples : 100\n",
+      "S16_C4_N150_random_samples : 100\n",
+      "S16_C4_N50_random_samples : 101\n",
+      "S16_C8_N1000_random_samples : 100\n",
+      "S16_C8_N150_random_samples : 100\n",
+      "S16_C8_N50_random_samples : 100\n",
+      "S2_C16_N1000_random_samples : 66\n",
+      "S2_C2_N1000_random_samples : 100\n",
+      "S2_C2_N150_random_samples : 100\n",
+      "S2_C2_N50_random_samples : 101\n",
+      "S2_C4_N1000_random_samples : 65\n",
+      "S2_C8_N1000_random_samples : 100\n",
+      "S2_C8_N150_random_samples : 100\n",
+      "S2_C8_N50_random_samples : 101\n",
+      "S4_C16_N1000_random_samples : 100\n",
+      "S4_C16_N150_random_samples : 100\n",
+      "S4_C16_N50_random_samples : 101\n",
+      "S4_C2_N1000_random_samples : 65\n",
+      "S4_C4_N1000_random_samples : 64\n",
+      "S4_C4_N150_random_samples : 20\n",
+      "S4_C4_N50_random_samples : 20\n",
+      "S4_C8_N1000_random_samples : 64\n",
+      "S8_C16_N1000_random_samples : 65\n",
+      "S8_C2_N1000_random_samples : 100\n",
+      "S8_C2_N150_random_samples : 100\n",
+      "S8_C2_N50_random_samples : 101\n",
+      "S8_C4_N1000_random_samples : 65\n",
+      "S8_C8_N1000_random_samples : 100\n",
+      "S8_C8_N150_random_samples : 100\n",
+      "S8_C8_N50_random_samples : 101\n",
       "\n",
-      "Total Random Sample Count : 188\n"
+      "Total Random Sample Count : 3552\n"
      ]
     }
    ],
@@ -149,9 +198,9 @@
     "\n",
     "    #if \"N1000\" not in file:\n",
     "    #if \"S16_C16_N\" not in file:\n",
-    "    #<    continue\n",
+    "    #    continue\n",
     "    \n",
-    "    df = df[df['time'] > 0]    \n",
+    "    #df = df[df['time'] > 0]    \n",
     "    count = len(df[df['time'].notna()])\n",
     "    #count = len(df['time'])\n",
     "    \n",
@@ -164,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 218,
    "id": "0971ae98-a21c-45cf-a21e-80bf6069b887",
    "metadata": {},
    "outputs": [
@@ -172,40 +221,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "results_tlbo_sgpr_prf_changing_envs_open_box_2025-01-10_08-39-02 : 8\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\changing_env1_to_env3\\tlbo_sgpr_prf_changing_envs_open_box\\results_tlbo_sgpr_prf_changing_envs_open_box_2025-01-10_08-39-02.csv\n",
-      "\n",
-      "\n",
-      "results_tlbo_topov3_prf_exc_env1_env4_open_box_n_100_2025-01-13_07-00-13 : 14\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S16_C16_N1000\\tlbo_topov3_prf_exc_env1_env4_open_box_n_100\\results_tlbo_topov3_prf_exc_env1_env4_open_box_n_100_2025-01-13_07-00-13.csv\n",
-      "\n",
-      "\n",
-      "results_tlbo_rgpe_prf_exc_env2_env5_open_box_n_100_2025-01-13_07-23-34 : 54\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S16_C8_N100\\tlbo_rgpe_prf_exc_env2_env5_open_box_n_100\\results_tlbo_rgpe_prf_exc_env2_env5_open_box_n_100_2025-01-13_07-23-34.csv\n",
-      "\n",
-      "\n",
-      "results_tlbo_rgpe_prf_exc_env2_env5_open_box_n_50_2025-01-13_00-13-33 : 8\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S16_C8_N100\\tlbo_rgpe_prf_exc_env2_env5_open_box_n_50\\results_tlbo_rgpe_prf_exc_env2_env5_open_box_n_50_2025-01-13_00-13-33.csv\n",
-      "\n",
-      "\n",
-      "results_tlbo_topov3_prf_exc_env2_env5_open_box_n_75_2025-01-13_04-26-23 : 11\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S16_C8_N100\\tlbo_topov3_prf_exc_env2_env5_open_box_n_75\\results_tlbo_topov3_prf_exc_env2_env5_open_box_n_75_2025-01-13_04-26-23.csv\n",
-      "\n",
-      "\n",
-      "results_tlbo_rgpe_prf_exc_env3_env8_open_box_n_250_2025-01-11_03-01-16 : 9\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C1_N50\\tlbo_rgpe_prf_exc_env3_env8_open_box_n_250\\results_tlbo_rgpe_prf_exc_env3_env8_open_box_n_250_2025-01-11_03-01-16.csv\n",
-      "\n",
-      "\n",
-      "results_tlbo_topov3_prf_exc_env3_env8_open_box_n_150_2025-01-10_23-01-05 : 11\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C1_N50\\tlbo_topov3_prf_exc_env3_env8_open_box_n_150\\results_tlbo_topov3_prf_exc_env3_env8_open_box_n_150_2025-01-10_23-01-05.csv\n",
-      "\n",
-      "\n",
-      "results_tlbo_topov3_prf_exc_env3_env8_open_box_n_25_2025-01-12_18-44-37 : 18\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C1_N50\\tlbo_topov3_prf_exc_env3_env8_open_box_n_25\\results_tlbo_topov3_prf_exc_env3_env8_open_box_n_25_2025-01-12_18-44-37.csv\n",
-      "\n",
-      "\n",
-      "results_tlbo_topov3_prf_exc_env3_env8_open_box_n_50_2025-01-13_01-08-14 : 10\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C1_N50\\tlbo_topov3_prf_exc_env3_env8_open_box_n_50\\results_tlbo_topov3_prf_exc_env3_env8_open_box_n_50_2025-01-13_01-08-14.csv\n",
+      "results_tlbo_topov3_prf_exc_S2C2N50_S2C8N50_open_box_n_100_2025-01-18_12-41-34 : 35\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S2_C2_N50\\tlbo_topov3_prf_exc_S2C2N50_S2C8N50_open_box_n_100\\results_tlbo_topov3_prf_exc_S2C2N50_S2C8N50_open_box_n_100_2025-01-18_12-41-34.csv\n",
       "\n",
       "\n"
      ]
