--- a/experiments/model_optimizer/notebooks/list_results_files.ipynb
+++ b/experiments/model_optimizer/notebooks/list_results_files.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 228,
-   "id": "77823cb0-936f-4fe7-903a-de6ae5bd32ac",
+   "execution_count": 744,
+   "id": "81ad327b-bd53-4f26-aa28-eed08b9e2e9d",
    "metadata": {},
    "outputs": [
     {
@@ -11,76 +11,68 @@
      "output_type": "stream",
      "text": [
       "S16_C16_N1000:\n",
-      "  random_search_syne_tune: 25x;25x;\n",
-      "  tlbo_rgpe_prf_exc_S16C16N1000_S16C8N1000_open_box_n_100: 25x;\n",
-      "  tlbo_topov3_prf_exc_S16C16N1000_S16C8N1000_open_box_n_100: 8x;\n",
+      "  cost_model_rfs_bay_exc_w_update: 17x;\n",
+      "  cost_model_rfs_bay_exc_w_update_cluster: 12x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update_cluster: 1x;\n",
       "S16_C16_N150:\n",
-      "  quantile_exc_S16C16N150_S8C8N150_syne_tune_n_100: 25x;\n",
-      "  random_search_syne_tune: 25x;25x;\n",
-      "  tlbo_rgpe_prf_exc_S16C16N150_S8C8N150_open_box_n_100: 25x;\n",
-      "  tlbo_topov3_prf_exc_S16C16N150_S8C8N150_open_box_n_100: 25x;\n",
+      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
+      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
       "S16_C16_N50:\n",
-      "  quantile_exc_S16C16N50_S8C8N50_syne_tune_n_100: 25x;\n",
-      "  random_search_syne_tune: 25x;25x;\n",
-      "  tlbo_rgpe_prf_exc_S16C16N50_S8C8N50_open_box_n_100: 25x;\n",
-      "  tlbo_topov3_prf_exc_S16C16N50_S8C8N50_open_box_n_100: 25x;\n",
+      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
+      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
       "S2_C2_N1000:\n",
-      "  quantile_exc_S2C2N1000_S2C8N1000_syne_tune_n_100: 25x;\n",
-      "  random_search_syne_tune: 25x;25x;\n",
-      "  tlbo_rgpe_prf_exc_S2C2N1000_S2C8N1000_open_box_n_100: 25x;\n",
-      "  tlbo_topov3_prf_exc_S2C2N1000_S2C8N1000_open_box_n_100: 25x;\n",
-      "S2_C2_N150:\n",
-      "  quantile_exc_S2C2N150_S2C8N150_syne_tune_n_100: 25x;\n",
-      "  random_search_syne_tune: 25x;25x;\n",
-      "  tlbo_rgpe_prf_exc_S2C2N150_S2C8N150_open_box_n_100: 25x;\n",
-      "  tlbo_topov3_prf_exc_S2C2N150_S2C8N150_open_box_n_100: 25x;\n",
+      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
+      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
       "S2_C2_N50:\n",
-      "  quantile_exc_S2C2N50_S2C8N50_syne_tune_n_100: 25x;\n",
-      "  quantile_exc_S2C2N50_S2C8N50_syne_tune_with_clustering_n_100: 5x;\n",
-      "  random_search_syne_tune: 25x;25x;\n",
-      "  tlbo_rgpe_prf_exc_S2C2N50_S2C8N50_open_box_n_100: 25x;\n",
-      "  tlbo_rgpe_prf_exc_S2C2N50_S2C8N50_open_box_with_clustering_n_100: 4x;\n",
-      "  tlbo_topov3_prf_exc_S2C2N50_S2C8N50_open_box_n_100: 21x;\n",
-      "  tlbo_topov3_prf_exc_S2C2N50_S2C8N50_open_box_with_clustering_n_100: 3x;\n",
+      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
+      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
       "S8_C2_N1000:\n",
-      "  quantile_exc_S8C2N1000_S8C8N1000_syne_tune_n_100: 25x;\n",
-      "  random_search_syne_tune: 20x;25x;\n",
-      "  tlbo_rgpe_prf_exc_S8C2N1000_S8C8N1000_open_box_n_100: 25x;\n",
-      "  tlbo_topov3_prf_exc_S8C2N1000_S8C8N1000_open_box_n_100: 20x;\n",
+      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
+      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
       "S8_C2_N150:\n",
-      "  quantile_exc_S8C2N150_S8C8N150_syne_tune_n_100: 25x;\n",
-      "  random_search_syne_tune: 25x;25x;\n",
-      "  tlbo_rgpe_prf_exc_S8C2N150_S8C8N150_open_box_n_100: 25x;\n",
-      "  tlbo_topov3_prf_exc_S8C2N150_S8C8N150_open_box_n_100: 25x;\n",
+      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
+      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
       "S8_C2_N50:\n",
-      "  quantile_exc_S8C2N50_S8C8N50_syne_tune_n_100: 25x;\n",
-      "  random_search_syne_tune: 25x;25x;\n",
-      "  tlbo_rgpe_prf_exc_S8C2N50_S8C8N50_open_box_n_100: 25x;\n",
-      "  tlbo_topov3_prf_exc_S8C2N50_S8C8N50_open_box_n_100: 25x;\n",
+      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
+      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
+      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
       "\n",
-      "S16_C16_N1000: 83\n",
-      "S16_C16_N150: 125\n",
-      "S16_C16_N50: 125\n",
-      "S2_C2_N1000: 125\n",
-      "S2_C2_N150: 125\n",
-      "S2_C2_N50: 133\n",
-      "S8_C2_N1000: 115\n",
-      "S8_C2_N150: 125\n",
-      "S8_C2_N50: 125\n",
+      "S16_C16_N1000: 55\n",
+      "S16_C16_N150: 100\n",
+      "S16_C16_N50: 100\n",
+      "S2_C2_N1000: 100\n",
+      "S2_C2_N50: 100\n",
+      "S8_C2_N1000: 100\n",
+      "S8_C2_N150: 100\n",
+      "S8_C2_N50: 100\n",
       "\n",
-      "Total Transfer Count : 1081\n"
+      "Total Transfer Count : 755\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "# import pandas as pd\n",
     "import glob\n",
     "import yaml\n",
     "\n",
     "\n",
     "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_6250k/*/*/*.csv')\n",
     "\n",
-    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/*/*.csv')\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/cost*/*.csv')\n",
     "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k_shorter_runs/*/*/*.csv')\n",
     "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_175k/*/*/*.csv')\n",
     "\n",
@@ -124,64 +116,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "id": "3059d1c8-745e-441b-8d23-588a7cfe457a",
+   "execution_count": null,
+   "id": "bd1d8ec2-8a88-4554-953a-2febdd41ecaa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S16_C16_N10000_random_samples : 4\n",
-      "S16_C16_N1000_random_samples : 97\n",
-      "S16_C16_N100_random_samples : 42\n",
-      "S16_C16_N150_random_samples : 100\n",
-      "S16_C16_N200_random_samples : 62\n",
-      "S16_C16_N20_random_samples : 57\n",
-      "S16_C16_N300_random_samples : 64\n",
-      "S16_C16_N400_random_samples : 64\n",
-      "S16_C16_N500_random_samples : 43\n",
-      "S16_C16_N50_random_samples : 100\n",
-      "S16_C16_N600_random_samples : 64\n",
-      "S16_C16_N700_random_samples : 65\n",
-      "S16_C16_N800_random_samples : 65\n",
-      "S16_C16_N900_random_samples : 65\n",
-      "S16_C2_N1000_random_samples : 60\n",
-      "S16_C4_N1000_random_samples : 100\n",
-      "S16_C4_N150_random_samples : 100\n",
-      "S16_C4_N50_random_samples : 101\n",
-      "S16_C8_N1000_random_samples : 100\n",
-      "S16_C8_N150_random_samples : 100\n",
-      "S16_C8_N50_random_samples : 100\n",
-      "S2_C16_N1000_random_samples : 66\n",
-      "S2_C2_N1000_random_samples : 100\n",
-      "S2_C2_N150_random_samples : 100\n",
-      "S2_C2_N50_random_samples : 101\n",
-      "S2_C4_N1000_random_samples : 65\n",
-      "S2_C8_N1000_random_samples : 100\n",
-      "S2_C8_N150_random_samples : 100\n",
-      "S2_C8_N50_random_samples : 101\n",
-      "S4_C16_N1000_random_samples : 100\n",
-      "S4_C16_N150_random_samples : 100\n",
-      "S4_C16_N50_random_samples : 101\n",
-      "S4_C2_N1000_random_samples : 65\n",
-      "S4_C4_N1000_random_samples : 64\n",
-      "S4_C4_N150_random_samples : 20\n",
-      "S4_C4_N50_random_samples : 20\n",
-      "S4_C8_N1000_random_samples : 64\n",
-      "S8_C16_N1000_random_samples : 65\n",
-      "S8_C2_N1000_random_samples : 100\n",
-      "S8_C2_N150_random_samples : 100\n",
-      "S8_C2_N50_random_samples : 101\n",
-      "S8_C4_N1000_random_samples : 65\n",
-      "S8_C8_N1000_random_samples : 100\n",
-      "S8_C8_N150_random_samples : 100\n",
-      "S8_C8_N50_random_samples : 101\n",
-      "\n",
-      "Total Random Sample Count : 3552\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import glob\n",
@@ -213,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 687,
    "id": "0971ae98-a21c-45cf-a21e-80bf6069b887",
    "metadata": {},
    "outputs": [
@@ -221,8 +159,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "results_tlbo_topov3_prf_exc_S2C2N50_S2C8N50_open_box_n_100_2025-01-18_12-41-34 : 35\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S2_C2_N50\\tlbo_topov3_prf_exc_S2C2N50_S2C8N50_open_box_n_100\\results_tlbo_topov3_prf_exc_S2C2N50_S2C8N50_open_box_n_100_2025-01-18_12-41-34.csv\n",
+      "results_random_search_syne_tune_2025-01-19_18-53-43 : 9\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N150\\random_search_syne_tune\\results_random_search_syne_tune_2025-01-19_18-53-43.csv\n",
+      "\n",
+      "\n",
+      "results_random_search_syne_tune_2025-01-20_02-51-09 : 8\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N150\\random_search_syne_tune\\results_random_search_syne_tune_2025-01-20_02-51-09.csv\n",
       "\n",
       "\n"
      ]
